Move stuff around and fixed comments.

--- a/MakeItEasy.Tests/MakeItEasy.Tests.csproj
+++ b/MakeItEasy.Tests/MakeItEasy.Tests.csproj
@@ -49,6 +49,9 @@
   <ItemGroup>
     <Compile Include="MakeItEasyTestFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThingBuilder.cs" />
+    <Compile Include="ThingContainer.cs" />
+    <Compile Include="ThingToMake.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MakeItEasy\MakeItEasy.csproj">
