--- a/MakeItEasy.Tests/MakeItEasy.Tests.csproj
+++ b/MakeItEasy.Tests/MakeItEasy.Tests.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MakeItEasyTestFixture.cs" />
+    <Compile Include="MakeItEasyTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThingBuilder.cs" />
     <Compile Include="ThingContainer.cs" />
